Refactor router connection and documentation for clarity, update risk action SOP with new guidelines, and enhance local connection tests

--- a/system_architecture.html
+++ b/system_architecture.html
@@ -217,6 +217,7 @@
                 <a href="http://localhost:5000" class="quick-link" target="_blank">Web UI 本地</a>
                 <a href="http://172.20.0.10:5000" class="quick-link" target="_blank">Web UI 容器</a>
                 <a href="http://220.135.21.74:5000" class="quick-link" target="_blank">Web UI 公網</a>
+                <a href="http://127.0.0.1:8788" class="quick-link" target="_blank">本機中控台（兩機互動）</a>
                 <a href="https://220.135.21.74:8443" class="quick-link" target="_blank">路由器管理</a>
                 <a href="http://www.wuchang.life" class="quick-link" target="_blank">主網站</a>
                 <a href="http://shop.wuchang.life" class="quick-link" target="_blank">商店</a>
